overflow fixed

--- a/milestone1/style.css
+++ b/milestone1/style.css
@@ -21,10 +21,13 @@ body, main.container, .section.contacts, .section.messages{
 main.container{
     position: relative;
     background: #fff;
-    min-height: calc(100vh - 2rem);
+    height: calc(100vh - 2rem);
     margin-top: 1rem;
     padding: 0;
     display: flex;
+}
+.section.contacts, .section.messages{
+    height: 100%;
 }
 
 .section{
